# 6000words

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  seed_data.py  session_utils.py  vocabulary.db
.github/workflows/: build.yml
views/: dashboard_view.py  difficult_words_view.py  landing_view.py  learning_view.py  words_view.py
